Add Copyright and styling to Login

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.background {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+}
+
+img {
+  max-width: 65%;
+  height: 100vh;
+}
